ai_hub/internal/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildcard-proxy-ingress
  namespace: keda
spec:
  ingressClassName: traefik
  rules:
    - host: "*.worker.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keda-add-ons-http-interceptor-proxy
                port:
                  number: 8080
